# Homework_DRF

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  pyproject.toml
config/: settings.py  urls.py
fixtures/: auth.json  groups.json  payments.json
learning/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
learning/management/commands/: create_su.py  fill_db.py
learning/migrations/: 0001_initial.py  0002_alter_lesson_video.py  0003_alter_course_preview_alter_lesson_preview.py  0004_course_owner_lesson_owner.py  0005_course_price_lesson_price.py
users/: models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_options_payments.py  0004_subscribe.py  0005_subscribe_payment_id.py
